[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/popups/age_rating/AgeRatingPicker.gd" type="Script" id=1]
[ext_resource path="res://assets/ratings/esrb/M.png" type="Texture" id=2]
[ext_resource path="res://assets/ratings/esrb/E10.png" type="Texture" id=3]
[ext_resource path="res://assets/ratings/esrb/E.png" type="Texture" id=4]
[ext_resource path="res://assets/ratings/esrb/T.png" type="Texture" id=5]
[ext_resource path="res://assets/ratings/esrb/AO.png" type="Texture" id=6]
[ext_resource path="res://assets/ratings/esrb/unknown.png" type="Texture" id=7]

[node name="AgeRatingPicker" type="HBoxContainer"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 164.0
focus_mode = 2
size_flags_horizontal = 3
script = ExtResource( 1 )
mapping = [ 0, 3, 10, 13, 17, 18 ]
disabled_modulate = Color( 0.611765, 0.27451, 0.27451, 1 )

[node name="Label" type="Label" parent="."]
margin_top = 43.0
margin_right = 35.0
margin_bottom = 57.0
rect_min_size = Vector2( 35, 0 )
text = "ESRB"

[node name="Unknown" type="TextureRect" parent="."]
unique_name_in_owner = true
margin_left = 39.0
margin_right = 119.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 123.0
margin_right = 127.0
margin_bottom = 100.0

[node name="1" type="TextureRect" parent="."]
unique_name_in_owner = true
margin_left = 131.0
margin_right = 211.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="2" type="TextureRect" parent="."]
unique_name_in_owner = true
margin_left = 215.0
margin_right = 295.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="3" type="TextureRect" parent="."]
unique_name_in_owner = true
margin_left = 299.0
margin_right = 379.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="4" type="TextureRect" parent="."]
unique_name_in_owner = true
margin_left = 383.0
margin_right = 463.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="5" type="TextureRect" parent="."]
unique_name_in_owner = true
margin_left = 467.0
margin_right = 547.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 100 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Age" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 551.0
margin_top = 43.0
margin_right = 597.0
margin_bottom = 57.0
text = "3 years"

[connection signal="focus_entered" from="." to="." method="_on_AgeRatingPicker_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_AgeRatingPicker_focus_exited"]
[connection signal="gui_input" from="Unknown" to="." method="_on_Unknown_gui_input"]
[connection signal="gui_input" from="1" to="." method="_on_1_gui_input"]
[connection signal="gui_input" from="2" to="." method="_on_2_gui_input"]
[connection signal="gui_input" from="3" to="." method="_on_3_gui_input"]
[connection signal="gui_input" from="4" to="." method="_on_4_gui_input"]
[connection signal="gui_input" from="5" to="." method="_on_5_gui_input"]
